--- a/dada/DADA/Template/templates/default_admin_template.tmpl
+++ b/dada/DADA/Template/templates/default_admin_template.tmpl
@@ -6,6 +6,14 @@
  <head>
   <title><!-- tmpl_var title --> - <!-- tmpl_var list_settings.list_name --> - <!-- tmpl_var PROGRAM_NAME --></title>
   <!-- tmpl_var javascript -->
+
+
+<script src="<!-- tmpl_var S_PROGRAM_URL -->/javascripts/prototype.js" type="text/javascript"></script>
+<script src="<!-- tmpl_var S_PROGRAM_URL -->/javascripts/scriptaculous.js" type="text/javascript"></script>
+
+
+
+
   <style type="text/css" media="all">
    <!--
     @import "<!-- tmpl_var S_PROGRAM_URL -->/css/";
