--- a/dada/DADA/Template/templates/send_email_archive_options_widget.tmpl
+++ b/dada/DADA/Template/templates/send_email_archive_options_widget.tmpl
@@ -184,10 +184,13 @@
          <option value="2002">2002</option>
          <option value="2003">2003</option>
          <option value="2004">2004</option>
-         <option selected="selected" value="2005">2005</option>
+         <option value="2005">2005</option>
          <option value="2006">2006</option>
          <option value="2007">2007</option>
          <option value="2008">2008</option>
+         <option value="2009">2009</option>
+         <option value="2010">2010</option>
+         <option value="2011">2011</option>
         </select> - 
         <select name="backdate_hour">
          <option value="12">12</option>
