--- a/dada/DADA/Template/templates/profile_reset_password.tmpl
+++ b/dada/DADA/Template/templates/profile_reset_password.tmpl
@@ -1,11 +1,15 @@
 <!-- begin profile_reset_password.tmpl --> 
 
-	<h1>Reset Your Profile Password:</h1> 
+	<h1>Authorization Successful! Pick a New Password:</h1> 
 	
 	<form action="<!-- tmpl_var PROGRAM_URL -->" method="post" /> 
-		<input type="hidden" name="f" value='profile_reset_password' /> 
-		<p>Email Address: <input type="text" name="email" value="" /></p> 
-		<input type="submit" value="Send Authorization Code..." /> 
+		<input type="hidden" name="f"     value="profile_reset_password"  /> 
+		<input type="hidden" name="email" value="<!-- tmpl_var email -->" /> 
+		<input type="hidden" name="auth_code" value="<!-- tmpl_var auth_code -->" />
+		<p>
+			Your New Password: <input type="password" name="password" value="" />
+		</p> 
+		<input type="submit" value="Reset Your Password and Login..." /> 
 	</form> 
 	
 <!-- end profile_reset_password.tmpl --> 
