--- a/dada/DADA/Template/templates/profile_login.tmpl
+++ b/dada/DADA/Template/templates/profile_login.tmpl
@@ -128,7 +128,7 @@
 <h1>Forgot Your Profile Password?</h1> 
 
 
-<form action="<!-- tmpl_var PROGRAM_URL -->" method="post" /> 
+<form action="<!-- tmpl_var PROGRAM_URL -->" method="post" > 
 	<input type="hidden" name="f" value='profile_reset_password' /> 
 	<p>
 		<label for="reset_email" style="width: 7em;float: left;text-align: right;margin-right: 0.5em;display: block">
@@ -142,8 +142,6 @@
 		<input type="submit" value="Reset Your Profile Password" /> 
 	</div>
 	<div class="floatclear"></div>
-
-
 
 </form>
 
