--- a/dada/DADA/Template/templates/profile_reset_password.tmpl
+++ b/dada/DADA/Template/templates/profile_reset_password.tmpl
@@ -2,7 +2,7 @@
 
 	<h1>Authorization Successful! Pick a New Password:</h1> 
 	
-	<form action="<!-- tmpl_var PROGRAM_URL -->" method="post" /> 
+	<form action="<!-- tmpl_var PROGRAM_URL -->" method="post" > 
 		<input type="hidden" name="f"     value="profile_reset_password"  /> 
 		<input type="hidden" name="email" value="<!-- tmpl_var email -->" /> 
 		<input type="hidden" name="auth_code" value="<!-- tmpl_var auth_code -->" />
